@@ -364,12 +364,11 @@ machine in these lists is:
 
 <p><a href="machines.html">Machines emulated using the new framework</a>:
 <ul
-  <!-- TODO
   <li><b><u>MIPS</u></b>
   <ul>
-    <li><b>testmips</b> (<a href="experiments.html#expdevices">experimental</a>)
+    <li><a href="machines/machine_testmips.html"><b>testmips</b></a> (<i>partial</i> support for experimental devices)
   </ul>
-  <p> -->
+  <p>
   <li><b><u>Motorola 88K</u></b>
   <ul>
     <!-- TODO <li><a href="machines/machine_mvme187.html"><b>Motorola MVME187</b></a> (<a href="machines/machine_mvme187.html#openbsdmvme88kinstall">OpenBSD/mvme88k</a>) -->
@@ -387,7 +386,7 @@ machine in these lists is:
 	<a href="guestoses.html#openbsdcatsinstall">OpenBSD/cats</a>)
     <li><b>IQ80321</b> (<a href="guestoses.html#netbsdevbarminstall">NetBSD/evbarm</a>)
     <li><b>NetWinder</b> (<a href="guestoses.html#netbsdnetwinderinstall">NetBSD/netwinder</a>)
-    <li><b>testarm</b> (<a href="experiments.html#expdevices">experimental</a>)
+    <li><b>testarm</b> (<a href="experiments.html#expdevices">experimental</a>, <a href="guestoses.html#helenos">HelenOS/arm</a>)
   </ul>
   <p>
   <li><b><u>MIPS</u></b>
@@ -404,13 +403,13 @@ machine in these lists is:
     <li><b>Algorithmics P5064</b> (<a href="guestoses.html#netbsdalgorinstall">NetBSD/algor</a>)
     <li><b>SGI O2 (aka IP32)</b> <font color="#0000e0">(<super>*2</super>)</font>
 	(<a href="guestoses.html#netbsdsgimips">NetBSD/sgi</a>)
-    <li><b>testmips</b> (<a href="experiments.html#expdevices">experimental</a>)
+    <li><b>oldtestmips</b> (<a href="experiments.html#expdevices">experimental</a>, <a href="guestoses.html#helenos">HelenOS/mips</a>)
   </ul>
   <p>
   <li><b><u>Motorola 88K</u></b>
   <ul>
     <li><b>Motorola MVME187</b> (<a href="guestoses.html#openbsdmvme88kinstall">OpenBSD/mvme88k</a>)
-    <li><b>testm88k</b> (<a href="experiments.html#expdevices">experimental</a>)
+    <li><b>oldtestm88k</b> (<a href="experiments.html#expdevices">experimental</a>)
   </ul>
   <p>
   <li><b><u>PowerPC</u></b>
